--- a/src/main/resources/webapp/order/admin/static/components/page/notice/add/add.html
+++ b/src/main/resources/webapp/order/admin/static/components/page/notice/add/add.html
@@ -8,7 +8,7 @@
             </a>
         </div>
         <div class="panel-body">
-            <iframe src="/static/wx/index.html"  frameborder="0"></iframe>
+            <iframe src="./static/wx/index.html"  frameborder="0"></iframe>
         </div>
     </div>
 </div>
