--- a/src/main/resources/webapp/order/admin/static/components/page/order/order.html
+++ b/src/main/resources/webapp/order/admin/static/components/page/order/order.html
@@ -65,7 +65,7 @@
                     <td>{{o.number}}</td>
                     <td>{{o.table.no}}</td>
                     <td><a v-link="{path:'order/'+o._id}" >查看</a></td>
-                    <td><a href="">取消订单</a></td>
+                    <td><a @click="onCancel(o)" href="javascript:;">取消订单</a></td>
                 </tr>
                 </tbody></table>
             <div class="c-pager">
